test the request
